--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="img/logo.png" alt="Logo Cliente" class="client-logo">
                 
                 <!-- Separador visual -->
-                <span style="font-size:20px; color:#aaa; margin: 0 10px;">✕</span>
+                <span style="font-size:20px; color:#aaa; margin: 0 10px;"> </span>
                 
                 <!-- Logo CV Tools (Proveedor) -->
                 <img src="img/cvtools.png" alt="CV Tools" class="provider-logo">
