--- a/fichas.html
+++ b/fichas.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador de Fichas Técnicas - CV Tools</title>
+    <title>Buscador de Fichas Técnicas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="page-fichas">
     <div class="container">
-        <header>
-            <img src="img/cvtools.png" alt="CV Tools Logo" class="main-logo">
-            <h1>Buscador de Fichas Técnicas</h1>
+        <!-- HEADER CORREGIDO -->
+        <header class="main-header">
+            <div class="logo-container">
+                <img src="img/cvtools.png" alt="CV Tools Logo" class="provider-logo">
+            </div>
+            <h1>Fichas Técnicas</h1>
         </header>
 
         <main>
