--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- 1. Buscador y Pedidos -->
             <a href="buscador.html" class="menu-card card-1">
                 <h2>🛒 Realizar Pedido</h2>
-                <p>Consulta precios netos, stock en tiempo real y realiza presupuestos.</p>
+                <p>Consulta precios netos, stock en tiempo real y realiza presupuestos <strong> (incluso a tus clientes indicando el margen).</strong></p>
             </a>
 
             <!-- 2. Descargas (Catálogo y Tarifas) -->
