Presupuestos, pedidos y stocks

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <main class="menu-grid">
             <!-- 1. Buscador y Pedidos -->
             <a href="buscador.html" class="menu-card card-1">
-                <h2>🛒 Realizar Pedido</h2>
+                <h2>🛒 Presupuestos, pedidos y stocks</h2>
                 <p>Consulta precios netos, stock en tiempo real y realiza presupuestos <strong> (incluso a tus clientes indicando el margen).</strong></p>
             </a>
 
